# Dextool-MCDC

./: README.md  ast_dump.sh  bar.cpp  compile_commands.json  compile_commands.json.cpy  foo.cpp  foo.hpp  run.sh  run_debug.sh  testProc
clang/: Cursor.d
dextool_clang_extensions/cpp_source/: binary_op.cpp
dextool_clang_extensions/source/dextool/clang_extensions/: package.d
plugin/: CMakeLists.txt
plugin/cppmcdc/: CMakeLists.txt
plugin/cppmcdc/source/dextool/plugin/cppmcdc/: runner.d
plugin/cppmcdc/source/dextool/plugin/cppmcdc/backend/: backend.d  generate_cpp.d  interface_.d  package.d  type.d
plugin/cppmcdc/source/dextool/plugin/cppmcdc/backend/analyze/: analyze_helper.d  package.d
plugin/cppmcdc/source/dextool/plugin/cppmcdc/backend/visitor/: package.d  type.d  visitor.d
plugin/cppmcdc/source/dextool/plugin/cppmcdc/frontend/: frontend.d  package.d  raw_args.d
plugin/cppmcdc/test/: foo.cpp  foo.hpp
plugin/cpptestdouble/source/dextool/plugin/cpptestdouble/backend/: backend.d
source/cpptooling/analyzer/clang/: analyze_helper.d  type.d
source/cpptooling/data/: class_classification.d  representation.d  type.d
source/cpptooling/generator/: #gtest.d#
